fix: map zoom-button contrast in dark mode

--- a/packages/frontend/src/components/SimpleMap/SimpleMap.module.css
+++ b/packages/frontend/src/components/SimpleMap/SimpleMap.module.css
@@ -98,7 +98,7 @@
 
     @mixin dark {
         background-color: alpha(var(--mantine-color-dark-6), 0.8) !important;
-        color: var(--mantine-color-ldGray-4) !important;
+        color: var(--mantine-color-ldGray-8) !important;
     }
 }
 
@@ -110,7 +110,7 @@
 
     @mixin dark {
         background-color: alpha(var(--mantine-color-dark-5), 0.95) !important;
-        color: var(--mantine-color-ldGray-2) !important;
+        color: var(--mantine-color-white) !important;
     }
 }
 
